Update path & Readme

--- a/aws-face-emoji-extension/popup.html
+++ b/aws-face-emoji-extension/popup.html
@@ -9,7 +9,7 @@
     <script src="libs/react-dom.js"></script>
     <script src="libs/uuidv4.min.js"></script>
     <script src="camera.js"></script>
-    <script src="authencate.js"></script>
+    <script src="authenticate.js"></script>
     <script src="emoji.js"></script>
     <script type="module" src="content.js"></script>
 </head>
